degate (0.0.8) unstable; urgency=low

  * Rewritten rendering engine: it uses OpenGL.

 -- Martin Schobert <martin@weltregierung.de>  Thu, 15 Apr 2010 09:51:00 +0100

degate (0.0.7) unstable; urgency=low

  * Core completely rewritten in C++. The core is now called libdegate.
  * Degate now uses cmake to build the code.
  * Degate now uses a tile based approach to handle large images.
  * Added basic support for distributed wire tracing.
  * Implemented autosave and restore.
  * Added support for behavioural description of standard cells in VHDL, Verilog and free text.
  * Added support for the autogeneration of VHDL and VHDL testbench code.
  * Support for enabling/disabling and re-ordering of layers added.
  * Annotations (a kind of 2D-boomarks) added.
  * Basic support for module hierarchy added.
  * Support for subprojects added.
  * Basic support for wire matching added.

 -- Martin Schobert <martin@weltregierung.de>  Sun, 15 Nov 2009 23:42:00 +0100
	
degate (0.0.6) unstable; urgency=low

  * improved grid configuration
  * focus removed from quit button and set to image area
  * improved connection inspector
  * gate list / gate selection: sortable rows, more attributes displayed
  * dedicated toolbar icons added
  * open projects via command line
  * added scaling manager: handle prescaled images (bicubical scaling)
  * template matching: select multiple gates for matching, work on scaled images
  * more API documentation
  * project attributes added: project name and project descr.
  * gates and gate ports can have colors - wires and vias too, but there is no UI
  * handling unregular grids
  * naming gate objects by position
  * precompiler macro fix: improved architecture detection (thanks to mazzoo)
	
 -- Martin Schobert <martin@weltregierung.de>  Wed, 30 Mar 2009 12:00:00 +0100

degate (0.0.5) unstable; urgency=low

  * select gate ports
  * inspect connections
  * join/ unjoin objects
  * several Bugfixes, e.g.